Fix z-index glitch in home page

--- a/src/main/webapp/css/front.css
+++ b/src/main/webapp/css/front.css
@@ -84,6 +84,7 @@
     position: absolute;
     right: 5px;
 	width: 182px;
+	z-index: 999;
 }
 
 #login-container div {
